src/scss/blocks/_forecast-daily.scss
.forecast-daily {
    position: relative;
    width: 392px;
    height: 395px;
    flex-shrink: 0;
    transform-style: preserve-3d;
    transition: transform 0.7s ease-in-out;
    &_active {
        transform: rotateY(-180deg);
    }
    @media (max-width: 991.98px) {
        width: 320px;
    }
    @media (max-width: 767.98px) {
        width: 100%;
        margin-bottom: 20px;
    }
    &-day {
        backface-visibility: hidden;
        position: absolute;
        width: calc(100% - 40px);
        height: calc(100% - 30px);
        display: flex;
        flex-direction: column;
        justify-content: stretch;
        align-items: center;
    }
    &-day__button {
        position: absolute;
        top: 45%;
        left: -50px;
        width: 120px;
        height: 35px;
        opacity: 0;
        visibility: hidden;
        transform: rotate(90deg);
        background: rgba($color: $coral, $alpha: 0.7);
        letter-spacing: 1px;
        transition: letter-spacing 0.4s, left 0.4s, background 0.4s, height 0.4s, visibility 0.4s, opacity 0.4s;
        @media (min-width: 768px) {
            &:hover {
                letter-spacing: 2px;
                left: -59px;
                height: 45px;
                background: $coral;
                border-bottom-left-radius: 0px;
                border-bottom-right-radius: 0px;
            }
        }
    }
    &-day__title {
        margin-bottom: 35px;
    }
    &-day__item {
        width: 100%;
        margin-bottom: 15px;
        padding-left: 50px;
        display: flex;
        justify-content: space-between;
        &:last-child {
            margin-bottom: 0;
        }
    }
    &-day__info {
        width: 85px;
        align-self: center;
        text-align: center;
    }
    &-day__part {
        margin-bottom: 5px;
        font-size: 18px;
    }
    &-day__feel {
        margin-bottom: 5px;
        font-size: 18px;
        font-weight: 300;
    }
    &-day__temp {
        font-size: 20px;
        color: $coral;
    }
    &-day__divider {
        align-self: center;
        width: 80px;
        height: 1px;
        background: rgba($color: $coral, $alpha: 0.5);
        @media (max-width: 991.98px) {
            width: 20px;
        }
        @media (max-width: 767.98px) {
            width: 80px;
        }
        @media (max-width: 575.98px) {
            width: 20px;
        }
    }
    &-hour {
        backface-visibility: hidden;
        position: absolute;
        width: calc(100% - 40px);
        height: calc(100% - 30px);
        transform: rotateY(180deg);
    }
    &-hour__button {
        position: absolute;
        top: 45%;
        right: -50px;
        width: 120px;
        height: 35px;
        opacity: 0;
        visibility: hidden;
        transform: rotate(-90deg);
        background: rgba($color: $purple, $alpha: 0.7);
        letter-spacing: 1px;
        transition: letter-spacing 0.4s, right 0.4s, background 0.4s, height 0.4s, visibility 0.4s, opacity 0.4s;
        @media (min-width: 768px) {
            &:hover {
                letter-spacing: 2px;
                right: -59px;
                height: 45px;
                background: $purple;
                border-bottom-left-radius: 0px;
                border-bottom-right-radius: 0px;
            }
        }
    }
    &-hour__title {
        margin-bottom: 20px;
    }
    &-hour__inner {
        width: 100%;
        display: flex;
        justify-content: space-between;
        padding-right: 50px;
        @media(max-width: 575.98px) {
            padding-right: 45px;
        }
    }
    &-hour__list {
        list-style-type: none;
    }
    &-hour__item {
        margin-bottom: 18px;
        width: 100px;
    }
    &-hour__info {
        display: flex;
        justify-content: space-between;
    }
    &-hour__temp {
        font-weight: 700;
        color: $purple;
    }
    &-hour__descr {
        color: $purple;
    }
    &-hour__divider {
        width: 1px;
        height: 310px;
        background: rgba($color: $purple, $alpha: 0.5);
    }
}

